--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             color: var(--togglesliderColor);
         }
     </style>
+    <script src="https://kit.fontawesome.com/17a9de0944.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -97,11 +98,12 @@
             </a>
         </div>
         <div class="theme-switch-wrapper">
+            <i class="fas fa-sun" style="font-size: 25px; margin-right: 5px;"></i>
             <label class="theme-switch" for="checkbox">
                 <input type="checkbox" id="checkbox" />
                 <div class="slider round"></div>
             </label>
-            <em>Switch Theme</em>
+            <i class="fas fa-moon" style="font-size: 25px; margin-left: 5px;"></i>
         </div>
     </nav>
 
